Fix sponsor logos on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -996,6 +996,7 @@
     filter: url("data:image/svg+xml;utf8,#grayscale");
     filter: gray;
     -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
   }
 
   .lj-clients-item img:hover {
@@ -1775,10 +1776,6 @@
     .lj-footer-menu ul li {
       text-align: center;
     }
-    
-    .btn-margin {
-      margin-top: 20px;
-    }
 
   }
 
@@ -1834,5 +1831,9 @@
 
     .lj-clients-texts a.lj-clients-texts-btnr {
     }
+    
+    .btn-margin {
+      margin-top: 20px;
+    }
 
-	}
+}
